<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ola.businesscard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ph" />

            <TextView
                android:id="@+id/pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:fontFamily="sans-serif-lights"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:text="@string/pizza"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pizza1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pizza"
                android:fontFamily="sans-serif-lights"
                android:layout_centerHorizontal="true"
                android:padding="2dp"
                android:text="@string/pizza1"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView
                android:id="@+id/addressi"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/address" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-lights"
                android:padding="8dp"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView
                android:id="@+id/phonei"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/phone" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-lights"
                android:padding="8dp"
                android:text="@string/phone"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView
                android:id="@+id/hoursi"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/open" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-lights"
                android:padding="8dp"
                android:text="@string/hours"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView
                android:id="@+id/wwwi"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/www_icon" />

            <TextView
                android:id="@+id/www"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:autoLink="web"
                android:fontFamily="sans-serif-lights"
                android:padding="8dp"
                android:text="@string/www"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <ImageView
                android:id="@+id/emaili"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-lights"
                android:padding="8dp"
                android:text="@string/email"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>